@@ -2,55 +2,44 @@ package api;
 
 import java.io.BufferedReader;
 import java.io.DataOutputStream;
-import java.io.File;
-import java.io.FileReader;
 import java.io.FileWriter;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.text.SimpleDateFormat;
 import java.util.ArrayList;
 import java.util.Date;
-import java.util.Iterator;
 import java.util.List;
-
-import org.json.simple.JSONArray;
-import org.json.simple.JSONObject;
 
 import com.google.gson.Gson;
 import com.google.gson.JsonArray;
-import com.google.gson.JsonElement;
 import com.google.gson.JsonObject;
-import com.google.gson.JsonParser;
-import com.google.gson.stream.JsonWriter;
 
 public class ResponseAPI {
-
-	@SuppressWarnings("unchecked")
 	public void criarJson(List<String> arqCSV ) {
 
-		JSONObject bodyJson = new JSONObject();
-		JSONObject bodyJsonObject = new JSONObject();
-		JSONArray bodyJsonList = new JSONArray();
+		JsonObject bodyJson = new JsonObject();
+		JsonObject bodyJsonObject = new JsonObject();
+		JsonArray bodyJsonList = new JsonArray();
 
-		for(int x = 0; x <= arqCSV.size(); x++ ) {
-
-			bodyJson.put("status", arqCSV.get(0));
-			bodyJson.put("data", arqCSV.get(1));
-			bodyJson.put("hora", arqCSV.get(2));
-			bodyJson.put("metodo", arqCSV.get(3));
-			bodyJson.put("mensagem", arqCSV.get(4));
-
+		if (arqCSV.size() >= 5) {
+			bodyJson.addProperty("status", arqCSV.get(0));
+			bodyJson.addProperty("data", arqCSV.get(1));
+			bodyJson.addProperty("hora", arqCSV.get(2));
+			bodyJson.addProperty("metodo", arqCSV.get(3));
+			bodyJson.addProperty("mensagem", arqCSV.get(4));
 		}
 
-		bodyJsonObject.put("funcional", bodyJson);
+		bodyJsonObject.add("funcional", bodyJson);
 		bodyJsonList.add(bodyJsonObject);
 
 		System.out.println(bodyJsonList);
 
 		try (FileWriter file = new FileWriter("employees.json")) {
-			file.write(bodyJsonList.toJSONString()); 
+			Gson gson = new Gson();
+			file.write(gson.toJson(bodyJsonList)); 
 			file.flush();
 
 		} catch (IOException e) {
@@ -134,7 +123,8 @@ public class ResponseAPI {
 	private void sendingPostRequest(String postJsonData) throws Exception {
 
 		String url = "http://localhost:8081/funcional";
-		URL obj = new URL(url);
+		URI uri = URI.create(url);
+		URL obj = uri.toURL();
 		HttpURLConnection con = (HttpURLConnection) obj.openConnection();
 
 		con.setRequestMethod("POST");
